--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,7 +1,10 @@
+<!-- this comp is already load as /recipes -->
+<!-- so for routerLink, we use relative url -->
 <a
-  href="#"
-  class="list-group-item clearfix"
-  (click)="onSelected()">
+  style="cursor:pointer"
+  [routerLink]="[index]"
+  routerLinkActive="active"
+  class="list-group-item clearfix">
   <div class="pull-left">
     <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
     <p class="list-group-item-text">{{ recipe.description }}</p>
