--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,3 +1,93 @@
-<p>
-  recipe-edit works!
-</p>
+<div class="row">
+  <div class="col-xs-12">
+    <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
+      <div class="row">
+        <div class="col-xs-12">
+          <button 
+            type="submit" class="btn btn-success"
+            [disabled]="!recipeForm.valid"
+            >
+            Save
+          </button>
+          <button type="button" class="btn btn-danger"
+                  (click)="onCancel()">
+            Cancel
+          </button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" id="name" class="form-control"
+                  formControlName="name">
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+          <div class="col-xs-12">
+            <div class="form-group">
+              <label for="imgPath">imgPath</label>
+              <input type="text" id="imgPath" class="form-control"
+              formControlName="imgPath" #imgPath>
+            </div>
+          </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12">
+          <img [src]="imgPath.value" class="img-responsive">
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="description">Description</label>
+            <textarea 
+              type="text" id="description" 
+              rows="6" class="form-control"
+              formControlName="description">
+            </textarea>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12" formArrayName="ingredients">
+          <div 
+            style="margin-top: 10px"
+            class="row"
+            *ngFor="let ingCtrl of recipeForm.get('ingredients').controls;
+            let i = index"
+            [formGroupName]="i">
+            <div class="col-xs-8">
+              <input 
+                type="text" class="form-control"
+                formControlName="name">
+            </div>
+            <div class="col-xs-2">
+              <input 
+                type="number" class="form-control"
+                formControlName="amount">
+            </div>
+            <div class="col-xs-2">
+                <button class="btn btn-danger">X</button>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-xs-12">
+              <button class="btn btn-success" (click)="onAddIngredient()"
+                      type="button">
+                Add Ingredient
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
