--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -15,15 +15,15 @@
 
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <ng-template [ngIf]="!authService.isAuthenticated()">
+        <ng-template [ngIf]="!isAuthenticated()">
           <li><a routerLink="/signup">Register</a></li>
           <li><a routerLink="/signin">Login</a></li>
         </ng-template>
         
         <li>
-          <a style="cursor: pointer;" (click)="onLogout()" *ngIf="authService.isAuthenticated()">LogOut</a>
+          <a style="cursor: pointer;" (click)="onLogout()" *ngIf="isAuthenticated()">LogOut</a>
         </li>
-        <li class="dropdown" appDropdown *ngIf="authService.isAuthenticated()">
+        <li class="dropdown" appDropdown *ngIf="isAuthenticated()">
           <a style="cursor: pointer" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a style="cursor: pointer" (click)="onSaveData()">Save Data</a></li>
